--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -12,15 +12,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:42.455029Z",
-     "start_time": "2024-06-15T00:44:42.452035Z"
+     "end_time": "2024-06-15T00:47:11.472454Z",
+     "start_time": "2024-06-15T00:47:11.469345Z"
     }
    },
    "cell_type": "code",
    "source": "from IPython.display import Image",
    "id": "a12f94421e81b995",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -28,9 +28,9 @@
    "source": [
     "$$\n",
     "\\begin{equation}\n",
-    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x\\\\\n",
-    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y\\\\\n",
-    "    \\rho \\left( \\frac{\\partial w}{\\partial t} + u \\frac{\\partial w}{\\partial x} + v \\frac{\\partial w}{\\partial y} + w \\frac{\\partial w}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial z} + \\mu \\left( \\frac{\\partial^2 w}{\\partial x^2} + \\frac{\\partial^2 w}{\\partial y^2} + \\frac{\\partial^2 w}{\\partial z^2} \\right) + f_z\n",
+    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) & = & -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x\\\\\n",
+    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) & = & -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y\\\\\n",
+    "    \\rho \\left( \\frac{\\partial w}{\\partial t} + u \\frac{\\partial w}{\\partial x} + v \\frac{\\partial w}{\\partial y} + w \\frac{\\partial w}{\\partial z} \\right) & = & -\\frac{\\partial p}{\\partial z} + \\mu \\left( \\frac{\\partial^2 w}{\\partial x^2} + \\frac{\\partial^2 w}{\\partial y^2} + \\frac{\\partial^2 w}{\\partial z^2} \\right) + f_z\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -61,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:42.483874Z",
-     "start_time": "2024-06-15T00:44:42.477686Z"
+     "end_time": "2024-06-15T00:47:11.494182Z",
+     "start_time": "2024-06-15T00:47:11.489972Z"
     }
    },
    "cell_type": "code",
@@ -76,12 +76,12 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -110,8 +110,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:42.950197Z",
-     "start_time": "2024-06-15T00:44:42.483874Z"
+     "end_time": "2024-06-15T00:47:11.497600Z",
+     "start_time": "2024-06-15T00:47:11.495188Z"
     }
    },
    "cell_type": "code",
@@ -122,13 +122,13 @@
    ],
    "id": "f1e212428f2a6bdd",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:43.981670Z",
-     "start_time": "2024-06-15T00:44:42.950197Z"
+     "end_time": "2024-06-15T00:47:12.559199Z",
+     "start_time": "2024-06-15T00:47:11.497600Z"
     }
    },
    "cell_type": "code",
@@ -201,13 +201,13 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:44.193805Z",
-     "start_time": "2024-06-15T00:44:43.982680Z"
+     "end_time": "2024-06-15T00:47:12.640269Z",
+     "start_time": "2024-06-15T00:47:12.560204Z"
     }
    },
    "cell_type": "code",
@@ -263,20 +263,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-15T00:44:44.195981Z",
-     "start_time": "2024-06-15T00:44:44.193805Z"
+     "end_time": "2024-06-15T00:47:12.642765Z",
+     "start_time": "2024-06-15T00:47:12.640269Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "d1c0ce98e21d2e4d",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 16
   }
  ],
  "metadata": {
