--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -4,8 +4,14 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Source: https://github.com/emhayki/CFD-Fundamental/blob/main/CFD-Fundamental-Guide.pdf\n",
-    "https://github.com/barbagroup/CFDPython/blob/master/lessons/01_Step_1.ipynb"
+    "CFD Sources: \n",
+    "1. https://github.com/emhayki/CFD-Fundamental/blob/main/CFD-Fundamental-Guide.pdf\n",
+    "2. https://github.com/barbagroup/CFDPython/blob/master/lessons/01_Step_1.ipynb\n",
+    "\n",
+    "\n",
+    "Theory sources: \n",
+    "3. https://www.math.toronto.edu/jko/APM346_summary_2_2020.pdf\n",
+    "4. https://youtu.be/ec7L8wRABy4"
    ],
    "id": "944c6a973388a009"
   },
@@ -28,9 +34,9 @@
    "source": [
     "$$\n",
     "\\begin{equation}\n",
-    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) & = -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x\\\\\n",
-    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) & = -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y\\\\\n",
-    "    \\rho \\left( \\frac{\\partial w}{\\partial t} + u \\frac{\\partial w}{\\partial x} + v \\frac{\\partial w}{\\partial y} + w \\frac{\\partial w}{\\partial z} \\right) & = -\\frac{\\partial p}{\\partial z} + \\mu \\left( \\frac{\\partial^2 w}{\\partial x^2} + \\frac{\\partial^2 w}{\\partial y^2} + \\frac{\\partial^2 w}{\\partial z^2} \\right) + f_z\n",
+    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x\\\\\n",
+    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y\\\\\n",
+    "    \\rho \\left( \\frac{\\partial w}{\\partial t} + u \\frac{\\partial w}{\\partial x} + v \\frac{\\partial w}{\\partial y} + w \\frac{\\partial w}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial z} + \\mu \\left( \\frac{\\partial^2 w}{\\partial x^2} + \\frac{\\partial^2 w}{\\partial y^2} + \\frac{\\partial^2 w}{\\partial z^2} \\right) + f_z\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -95,11 +101,40 @@
     "\n",
     "The result is the 1D transport equation:\n",
     "\n",
-    "$$ \\frac {\\partial u}{\\partial t} + c \\frac {\\partial u}{\\partial x}\\tag{5} $$\n",
+    "$$ \\frac {\\partial u}{\\partial t} + c \\frac {\\partial u}{\\partial x} = 0 \\tag{5}$$\n",
     "\n",
     "where $u(x,t)$ is the quantity being transported, c is the transport velocity, $x$ is the spatial coordinate, and $t$ is time."
    ],
    "id": "e2c62b01aa58c05a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "To solve the linear transport equation consider the equation 5 in vector component form operations:\n",
+    "\n",
+    "$$\n",
+    "0 = \\frac {\\partial u}{\\partial t} + c \\frac {\\partial u}{\\partial x} =\\begin{bmatrix} \\frac {\\partial u}{\\partial t} \\\\ \\frac{\\partial u}{\\partial x} \\end{bmatrix} \\begin{bmatrix}\n",
+    " 1 & c \\end{bmatrix} = \\nabla u(t,x) \\cdot (1, c) \n",
+    "$$\n",
+    "\n",
+    "The expression $\\nabla u(t,x) \\cdot (1, c)$ is the definition of the directional derivative of the function $u(t,x)$ in the direction of the vector $(1, c)$. With $\\vec s = (1, c)$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "D_{{s}}u = \\nabla u(t,x) \\cdot (1, c) = 0 \\tag {6}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "A zero directional derivative indicates that the rate of change of the function in a particular direction is zero. This means that the function is not changing in that direction. \n"
+   ],
+   "id": "447e702898aa4b7e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "c93761af88c5efad"
   },
   {
    "metadata": {},
