--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -34,8 +34,8 @@
    "source": [
     "$$\n",
     "\\begin{equation}\n",
-    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x\\\\\n",
-    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y\\\\\n",
+    "    \\rho \\left( \\frac{\\partial u}{\\partial t} + u \\frac{\\partial u}{\\partial x} + v \\frac{\\partial u}{\\partial y} + w \\frac{\\partial u}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial x} + \\mu \\left( \\frac{\\partial^2 u}{\\partial x^2} + \\frac{\\partial^2 u}{\\partial y^2} + \\frac{\\partial^2 u}{\\partial z^2} \\right) + f_x \\\\\n",
+    "    \\rho \\left( \\frac{\\partial v}{\\partial t} + u \\frac{\\partial v}{\\partial x} + v \\frac{\\partial v}{\\partial y} + w \\frac{\\partial v}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial y} + \\mu \\left( \\frac{\\partial^2 v}{\\partial x^2} + \\frac{\\partial^2 v}{\\partial y^2} + \\frac{\\partial^2 v}{\\partial z^2} \\right) + f_y \\\\\n",
     "    \\rho \\left( \\frac{\\partial w}{\\partial t} + u \\frac{\\partial w}{\\partial x} + v \\frac{\\partial w}{\\partial y} + w \\frac{\\partial w}{\\partial z} \\right) = -\\frac{\\partial p}{\\partial z} + \\mu \\left( \\frac{\\partial^2 w}{\\partial x^2} + \\frac{\\partial^2 w}{\\partial y^2} + \\frac{\\partial^2 w}{\\partial z^2} \\right) + f_z\n",
     "\\end{equation}\n",
     "$$\n",
@@ -99,7 +99,7 @@
     "\n",
     "Eq. 4 is still a non-linear equation. To linearize it we consider $u$ to be constant, then $u = c$  \n",
     "\n",
-    "The result is the 1D transport equation:\n",
+    "The result is the 1D linear transport equation:\n",
     "\n",
     "$$ \\frac {\\partial u}{\\partial t} + c \\frac {\\partial u}{\\partial x} = 0 \\tag{5}$$\n",
     "\n",
@@ -118,23 +118,27 @@
     " 1 & c \\end{bmatrix} = \\nabla u(t,x) \\cdot (1, c) \n",
     "$$\n",
     "\n",
-    "The expression $\\nabla u(t,x) \\cdot (1, c)$ is the definition of the directional derivative of the function $u(t,x)$ in the direction of the vector $(1, c)$. With $\\vec s = (1, c)$:\n",
+    "The expression $\\nabla u(t,x) \\cdot (1, c)$ is the definition of the directional derivative of the function $u(t,x)$ in the direction of the vector $(1, c)$. Now defining $\\vec s = (c, 1)$:\n",
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "D_{{s}}u = \\nabla u(t,x) \\cdot (1, c) = 0 \\tag {6}\n",
+    "D_{{s}}u = \\nabla u(x,t) \\cdot (c, 1) = 0 \\tag {6}\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "A zero directional derivative indicates that the rate of change of the function in a particular direction is zero. This means that the function is not changing in that direction. \n"
+    "A zero directional derivative indicates that the rate of change of the function in a particular direction is zero. This means that the function is not changing in that direction. This means that the function $u(x,t)$ is not changing in the direction of the vector (c, 1). This equation can be solved using a variety of methods:\n",
+    "\n",
+    "The general solution can be reached using a family of characteristic curves of the form $x - ct = C$. Parametrizing the lines by C, so:\n",
+    "\n",
+    "$$ \\begin{equation} u(x,t) = \\phi (C) = \\phi(x - ct) \\end{equation} \\tag{7}$$\n",
+    "\n",
+    "where $\\phi$ is some function \n",
+    "\n",
+    "With the initial conditions $u(x,0) = u_0(x)$ the particular solution using Eq. 7 becomes:\n",
+    "\n",
+    "$$ \\begin{equation} u(x,t) = u_0(C) = u_0(x - ct) \\end{equation} \\tag{8}$$"
    ],
    "id": "447e702898aa4b7e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "c93761af88c5efad"
   },
   {
    "metadata": {},
