--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "pretty_print(result)\n",
     "print(N(result))\n",
-    "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)}')"
+    "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)} %')"
    ],
    "id": "f2d41cefbc7d1330",
    "outputs": [
