--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -10,11 +10,7 @@
      "start_time": "2024-06-16T17:55:11.928423Z"
     }
    },
-   "source": [
-    "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
-    "import numpy \n",
-    "import math"
-   ],
+   "source": "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N",
    "outputs": [],
    "execution_count": 18
   },
@@ -29,12 +25,39 @@
    "source": [
     "x = symbols('x')\n",
     "func = cos(x)\n",
+    "\n",
+    "class Taylor(object):\n",
+    "    def __init__(self, x, func, n, x_i, x_i1):\n",
+    "        \"\"\"\n",
+    "        Taylor's approximation\n",
+    "        :param x: the independent variable name, as string\n",
+    "        :param n: number of taylor polynomials, as integer\n",
+    "        :param x_i: closer value to x_i1 for the taylor approximation f(x_i) < f(x_i1)\n",
+    "        :param x_i1: independent value to approximate\n",
+    "        \"\"\"\n",
+    "        self.x = symbols(f'{x}')\n",
+    "        self.func = func\n",
+    "        self.n = n\n",
+    "        self.x_i = x_i\n",
+    "        self.x_i1 = x_i1\n",
+    "        self.error = 0\n",
+    "        # for the first term of the series: f(a)\n",
+    "        # substitute the value of 'x' with 'x_i'\n",
+    "        self.result = func.subs(self.x, self.x_i)\n",
+    "        \n",
+    "    def taylor_approx(self):\n",
+    "        \n",
+    "        if self.n == 0:\n",
+    "            pass\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "\n",
     "n = 4\n",
     "x_i = pi/4\n",
     "x_i1 = pi/3\n",
     "\n",
-    "# for the first term of the series: f(a)\n",
-    "# substitute the value of 'x' with 'x0'\n",
+    "\n",
     "result = func.subs(x, x_i)\n",
     "# adding 5 + 1 terms in the series\n",
     "for i in range (1, n):\n",
