--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -1,59 +1,107 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-06-16T17:55:11.931813Z",
-     "start_time": "2024-06-16T17:55:11.928423Z"
-    }
-   },
-   "source": "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N",
-   "outputs": [],
-   "execution_count": 18
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T18:35:55.367749Z",
-     "start_time": "2024-06-16T18:35:55.358380Z"
+     "end_time": "2024-06-16T22:03:24.075668Z",
+     "start_time": "2024-06-16T22:03:24.066592Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "x = symbols('x')\n",
-    "func = cos(x)\n",
-    "\n",
+    "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
     "class Taylor(object):\n",
     "    def __init__(self, x, func, n, x_i, x_i1):\n",
     "        \"\"\"\n",
     "        Taylor's approximation\n",
-    "        :param x: the independent variable name, as string\n",
-    "        :param n: number of taylor polynomials, as integer\n",
-    "        :param x_i: closer value to x_i1 for the taylor approximation f(x_i) < f(x_i1)\n",
-    "        :param x_i1: independent value to approximate\n",
+    "        \n",
+    "        the independent variable name, as string :param x:\n",
+    "        \n",
+    "        the sympy function to approximate :param func:\n",
+    "        \n",
+    "        number of taylor polynomials, as integer :param n: \n",
+    "        \n",
+    "        closer value to x_i1 for the taylor approximation f(x_i) < f(x_i1) :param x_i: \n",
+    "        \n",
+    "        independent value to approximate  :param x_i1:  \n",
     "        \"\"\"\n",
-    "        self.x = symbols(f'{x}')\n",
+    "        self.x = x\n",
     "        self.func = func\n",
-    "        self.n = n\n",
+    "        self.n = n + 1\n",
     "        self.x_i = x_i\n",
     "        self.x_i1 = x_i1\n",
     "        self.error = 0\n",
+    "        self.err_str = ''\n",
     "        # for the first term of the series: f(a)\n",
     "        # substitute the value of 'x' with 'x_i'\n",
     "        self.result = func.subs(self.x, self.x_i)\n",
     "        \n",
     "    def taylor_approx(self):\n",
     "        \n",
-    "        if self.n == 0:\n",
-    "            pass\n",
+    "        if self.n == 1:\n",
+    "            self.error = ((self.func.subs(self.x, self.x_i1) - self.result)/self.func.subs(self.x, self.x_i1))*100\n",
+    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {n-1}, the relative percentual error is: {N(self.error)} %'\n",
+    "            return self.result\n",
     "        \n",
+    "        elif self.n > 1:\n",
+    "            for i in range (1, n):\n",
+    "                self.result += diff(self.func, self.x, i).subs(self.x, self.x_i)*((self.x-self.x_i)**i).subs(self.x, self.x_i1) / factorial(i)\n",
+    "            \n",
+    "            self.error = ((self.func.subs(self.x, self.x_i1) - self.result)/self.func.subs(self.x, self.x_i1))*100\n",
+    "            \n",
+    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {n-1}, the relative percentual error is: {N(self.error)} %'\n",
+    "            return self.result\n",
+    "            \n",
+    "    def taylor_error(self):\n",
+    "        if self.n == 1:\n",
+    "            print(self.err_str)\n",
     "        \n",
-    "    \n",
-    "\n",
-    "n = 4\n",
+    "        elif self.n > 1:\n",
+    "            print(self.err_str)\n",
+    "        \n"
+   ],
+   "id": "f2d41cefbc7d1330",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-16T22:03:27.137424Z",
+     "start_time": "2024-06-16T22:03:27.131969Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = symbols('x')\n",
+    "cos_tay = Taylor(x, cos(x), 1, pi/4, pi/3)\n",
+    "result = cos_tay.taylor_approx()\n",
+    "cos_tay.taylor_error()"
+   ],
+   "id": "10dc55622b816a3b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimating cos(x) when x = pi/3 with n = 1, the relative percentual error is: -4.39733175265645 %\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-16T21:25:00.814497Z",
+     "start_time": "2024-06-16T21:25:00.802175Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = symbols('x')\n",
+    "func = cos(x)\n",
+    "n = 2\n",
     "x_i = pi/4\n",
     "x_i1 = pi/3\n",
     "\n",
@@ -69,22 +117,21 @@
     "print(N(result))\n",
     "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)} %')"
    ],
-   "id": "f2d41cefbc7d1330",
+   "id": "9fb05db9d1a65c21",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             2       3     \n",
-      "  √2⋅π   √2⋅π    √2⋅π    √2\n",
-      "- ──── - ───── + ───── + ──\n",
-      "   24     576    20736   2 \n",
-      "0.499869146930044\n",
-      "Estimating cos(x) when x = pi/3 with n = 3, the relative percentual error is: 0.0261706139911812\n"
+      "  √2⋅π   √2\n",
+      "- ──── + ──\n",
+      "   24    2 \n",
+      "0.521986658763282\n",
+      "Estimating cos(x) when x = pi/3 with n = 1, the relative percentual error is: -4.39733175265645 %\n"
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -92,7 +139,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "9fb05db9d1a65c21"
+   "id": "5555a7f5e4585926"
   }
  ],
  "metadata": {
