--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -1,28 +1,36 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Knowing a near value or initial interval $x_{i}$ the value of a function $f$ in a certain value $x_{i+1}$, $f(x_{i+1})$ can be approximated using the taylor series: \n",
+    "\n",
+    "$$ \\begin{equation}\n",
+    "f(x_{i+1}) = \\sum_{n=0}^{\\infty} \\frac{f^{(n)}(x_i)}{n!} (x_{i+1} - x_i)^n\n",
+    "\\end{equation} $$"
+   ],
+   "id": "1f83543b204e8c10"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T22:03:24.075668Z",
-     "start_time": "2024-06-16T22:03:24.066592Z"
+     "end_time": "2024-06-16T22:27:47.595683Z",
+     "start_time": "2024-06-16T22:27:47.585609Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
     "class Taylor(object):\n",
+    "    \"\"\"Only works importing individual methods of the sympy package\"\"\"\n",
     "    def __init__(self, x, func, n, x_i, x_i1):\n",
     "        \"\"\"\n",
     "        Taylor's approximation\n",
-    "        \n",
     "        the independent variable name, as string :param x:\n",
-    "        \n",
     "        the sympy function to approximate :param func:\n",
-    "        \n",
     "        number of taylor polynomials, as integer :param n: \n",
-    "        \n",
     "        closer value to x_i1 for the taylor approximation f(x_i) < f(x_i1) :param x_i: \n",
-    "        \n",
     "        independent value to approximate  :param x_i1:  \n",
     "        \"\"\"\n",
     "        self.x = x\n",
@@ -37,58 +45,71 @@
     "        self.result = func.subs(self.x, self.x_i)\n",
     "        \n",
     "    def taylor_approx(self):\n",
-    "        \n",
+    "        \"\"\"Returns a scypy obj of the taylor approximation\"\"\"\n",
     "        if self.n == 1:\n",
     "            self.error = ((self.func.subs(self.x, self.x_i1) - self.result)/self.func.subs(self.x, self.x_i1))*100\n",
-    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {n-1}, the relative percentual error is: {N(self.error)} %'\n",
+    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {self.n - 1}, the relative percentual error is: {N(self.error)} %'\n",
     "            return self.result\n",
     "        \n",
-    "        elif self.n > 1:\n",
-    "            for i in range (1, n):\n",
+    "        if self.n > 1:\n",
+    "            for i in range (1, self.n):\n",
     "                self.result += diff(self.func, self.x, i).subs(self.x, self.x_i)*((self.x-self.x_i)**i).subs(self.x, self.x_i1) / factorial(i)\n",
     "            \n",
     "            self.error = ((self.func.subs(self.x, self.x_i1) - self.result)/self.func.subs(self.x, self.x_i1))*100\n",
     "            \n",
-    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {n-1}, the relative percentual error is: {N(self.error)} %'\n",
+    "            self.err_str = f'Estimating {self.func} when x = {self.x_i1} with n = {self.n - 1}, the relative percentual error is: {N(self.error)} %'\n",
     "            return self.result\n",
     "            \n",
-    "    def taylor_error(self):\n",
+    "    def taylor_error_summary(self):\n",
+    "        \"\"\"Returns a summary of the taylor approximation error\"\"\"\n",
     "        if self.n == 1:\n",
     "            print(self.err_str)\n",
+    "            self.err_str = ''\n",
     "        \n",
-    "        elif self.n > 1:\n",
+    "        if self.n > 1:\n",
     "            print(self.err_str)\n",
-    "        \n"
+    "            self.err_str = ''\n",
+    "    \n",
+    "    def taylor_error(self):\n",
+    "        \"\"\"Returns a scypy obj with the relative percentual error of the taylor approximation\"\"\"\n",
+    "        if self.n == 1:\n",
+    "            return self.error\n",
+    "        \n",
+    "        if self.n > 1:\n",
+    "            return self.error\n"
    ],
    "id": "f2d41cefbc7d1330",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T22:03:27.137424Z",
-     "start_time": "2024-06-16T22:03:27.131969Z"
+     "end_time": "2024-06-16T22:30:12.234481Z",
+     "start_time": "2024-06-16T22:30:12.223373Z"
     }
    },
    "cell_type": "code",
    "source": [
     "x = symbols('x')\n",
-    "cos_tay = Taylor(x, cos(x), 1, pi/4, pi/3)\n",
-    "result = cos_tay.taylor_approx()\n",
-    "cos_tay.taylor_error()"
+    "sin_tay = Taylor(x, sin(x), 4, pi/4, pi/3)\n",
+    "result = sin_tay.taylor_approx()\n",
+    "error = sin_tay.taylor_error()\n",
+    "print(N(result))\n",
+    "print(N(error))"
    ],
-   "id": "10dc55622b816a3b",
+   "id": "ea52ab9c014ff67c",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimating cos(x) when x = pi/3 with n = 1, the relative percentual error is: -4.39733175265645 %\n"
+      "0.866018484603905\n",
+      "0.000798958148705373\n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 31
   },
   {
    "metadata": {
@@ -98,25 +119,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "x = symbols('x')\n",
-    "func = cos(x)\n",
-    "n = 2\n",
-    "x_i = pi/4\n",
-    "x_i1 = pi/3\n",
-    "\n",
-    "\n",
-    "result = func.subs(x, x_i)\n",
-    "# adding 5 + 1 terms in the series\n",
-    "for i in range (1, n):\n",
-    "    result += diff(func, x, i).subs(x, x_i)*((x-x_i)**i).subs(x, x_i1) / factorial(i)\n",
-    "\n",
-    "error = ((func.subs(x, x_i1) - result)/func.subs(x, x_i1))*100\n",
-    "\n",
-    "pretty_print(result)\n",
-    "print(N(result))\n",
-    "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)} %')"
-   ],
+   "source": "",
    "id": "9fb05db9d1a65c21",
    "outputs": [
     {
