--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -13,6 +13,34 @@
    "id": "1f83543b204e8c10"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
+    "\n",
+    "x = symbols('x')\n",
+    "func = cos(x)\n",
+    "n = 2\n",
+    "x_i = pi/4\n",
+    "x_i1 = pi/3\n",
+    "\n",
+    "\n",
+    "result = func.subs(x, x_i)\n",
+    "# adding 5 + 1 terms in the series\n",
+    "for i in range (1, n):\n",
+    "    result += diff(func, x, i).subs(x, x_i)*((x-x_i)**i).subs(x, x_i1) / factorial(i)\n",
+    "\n",
+    "error = ((func.subs(x, x_i1) - result)/func.subs(x, x_i1))*100\n",
+    "\n",
+    "pretty_print(result)\n",
+    "print(N(result))\n",
+    "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)} %')"
+   ],
+   "id": "d7a8ddba53fdc58a"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-16T22:27:47.595683Z",
@@ -21,7 +49,6 @@
    },
    "cell_type": "code",
    "source": [
-    "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
     "class Taylor(object):\n",
     "    \"\"\"Only works importing individual methods of the sympy package\"\"\"\n",
     "    def __init__(self, x, func, n, x_i, x_i1):\n",
@@ -110,39 +137,6 @@
     }
    ],
    "execution_count": 31
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-16T21:25:00.814497Z",
-     "start_time": "2024-06-16T21:25:00.802175Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "9fb05db9d1a65c21",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  √2⋅π   √2\n",
-      "- ──── + ──\n",
-      "   24    2 \n",
-      "0.521986658763282\n",
-      "Estimating cos(x) when x = pi/3 with n = 1, the relative percentual error is: -4.39733175265645 %\n"
-     ]
-    }
-   ],
-   "execution_count": 7
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "5555a7f5e4585926"
   }
  ],
  "metadata": {
