--- a/taylorSeries.ipynb
+++ b/taylorSeries.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Knowing a near value or initial interval $x_{i}$ the value of a function $f$ in a certain value $x_{i+1}$, $f(x_{i+1})$ can be approximated using the taylor series: \n",
+    "Around a value $x_{i}$ the value of a function $f(x)$ in a certain near value $x_{i+1}$, $f(x_{i+1})$ can be approximated using the taylor series: \n",
     "\n",
     "$$ \\begin{equation}\n",
     "f(x_{i+1}) = \\sum_{n=0}^{\\infty} \\frac{f^{(n)}(x_i)}{n!} (x_{i+1} - x_i)^n\n",
@@ -13,13 +13,27 @@
    "id": "1f83543b204e8c10"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-17T21:48:18.360416Z",
+     "start_time": "2024-06-17T21:48:17.880656Z"
+    }
+   },
    "cell_type": "code",
+   "source": "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N",
+   "id": "cbe8c591275d5d59",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-16T23:35:49.545898Z",
+     "start_time": "2024-06-16T23:35:49.538240Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "from sympy import diff, symbols, factorial, exp, pretty_print, cos, sin, pi, N\n",
-    "\n",
     "x = symbols('x')\n",
     "func = cos(x)\n",
     "n = 2\n",
@@ -38,13 +52,27 @@
     "print(N(result))\n",
     "print(f'Estimating {func} when x = {x_i1} with n = {n-1}, the relative percentual error is: {N(error)} %')"
    ],
-   "id": "d7a8ddba53fdc58a"
+   "id": "d7a8ddba53fdc58a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  √2⋅π   √2\n",
+      "- ──── + ──\n",
+      "   24    2 \n",
+      "0.521986658763282\n",
+      "Estimating cos(x) when x = pi/3 with n = 1, the relative percentual error is: -4.39733175265645 %\n"
+     ]
+    }
+   ],
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T22:27:47.595683Z",
-     "start_time": "2024-06-16T22:27:47.585609Z"
+     "end_time": "2024-06-16T23:35:55.746627Z",
+     "start_time": "2024-06-16T23:35:55.740211Z"
     }
    },
    "cell_type": "code",
@@ -107,19 +135,19 @@
    ],
    "id": "f2d41cefbc7d1330",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-16T22:30:12.234481Z",
-     "start_time": "2024-06-16T22:30:12.223373Z"
+     "end_time": "2024-06-16T23:38:05.028658Z",
+     "start_time": "2024-06-16T23:38:05.018288Z"
     }
    },
    "cell_type": "code",
    "source": [
     "x = symbols('x')\n",
-    "sin_tay = Taylor(x, sin(x), 4, pi/4, pi/3)\n",
+    "sin_tay = Taylor(x, x**3, 3, 0.4, 0.8)\n",
     "result = sin_tay.taylor_approx()\n",
     "error = sin_tay.taylor_error()\n",
     "print(N(result))\n",
@@ -131,12 +159,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.866018484603905\n",
-      "0.000798958148705373\n"
+      "0.512000000000000\n",
+      "0\n"
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-17T20:04:11.285300Z",
+     "start_time": "2024-06-17T20:04:11.278827Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "24*5\n",
+    "    "
+   ],
+   "id": "339ceb65458dea2c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-17T21:48:33.982528Z",
+     "start_time": "2024-06-17T21:48:33.977748Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "exp(0.5)",
+   "id": "79799c041dcee22",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.64872127070013"
+      ],
+      "text/latex": "$\\displaystyle 1.64872127070013$"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7d0ca7f0cf55bf1a"
   }
  ],
  "metadata": {
