--- a/numericalDiferentiation.ipynb
+++ b/numericalDiferentiation.ipynb
@@ -127,14 +127,8 @@
     "    f'(x_{i}) = \\frac{f(x_{i+1}) - f(x_{i})}{h} - \\frac{R_1}{h} \n",
     "\\end{equation}\n",
     "\\tag{4}\n",
-    "$$"
-   ],
-   "id": "303b653095aad243"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "$$\n",
+    "\n",
     "The residual of a first order expansion $R_1$ can be calculated with the lagrange form of the residual:\n",
     "\n",
     "$$\n",
@@ -162,24 +156,75 @@
     "\n",
     "Where $\\Delta f_i$ is known as the `first forward difference` and $O(h)$ means that the error in the derivative approximation should be proportional to the size of the increment (h). If h is divided in half, the error in the derivative estimation should be reduced by half."
    ],
-   "id": "722558aa2d331a45"
+   "id": "303b653095aad243"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-18T17:32:20.645886Z",
+     "start_time": "2024-06-18T17:32:20.641722Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def g(x):\n",
-    "    result = "
+    "    result = -0.1*x**4+0.2*x**3+0.3*x**2+0.2*x+1\n",
+    "    return result\n",
+    "\n",
+    "def first_forward_d(f, x, h):\n",
+    "    derivative = (f(x+h) - f(x))/h\n",
+    "    return derivative\n",
+    "\n",
+    "print(\"g\\'(0.5) forward = \", first_forward_d(g, 0.5, 0.25))"
    ],
-   "id": "509494e990cb683"
+   "id": "509494e990cb683",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g'(0.5) forward =  0.7109375\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": [
+    "### First backward difference\n",
+    "\n",
+    "Taking count the first two terms of the taylor forward expanded series\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f(x_{i-1}) = f(x_{i}) - f'(x_{i}) h + R_1\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f'(x_{i}) = \\frac{f(x_{i}) - f(x_{i-1})}{h}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "    f'(x_{i}) = \\frac{f(x_{i}) - f(x_{i-1})}{h} + O(h) = \\frac{\\nabla f_i}{h} + O(h)\n",
+    "\\end{equation}\n",
+    "\\tag{6}\n",
+    "$$\n",
+    "\n",
+    "Where $\\nabla f_i$ is known as first backward difference."
+   ],
    "id": "e05286acbbe14a06"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### First central difference",
+   "id": "75cdbb63374fcec0"
   }
  ],
  "metadata": {
