--- a/1DLinearConvectionEquation.ipynb
+++ b/1DLinearConvectionEquation.ipynb
@@ -143,8 +143,22 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "To plot the equation, using the finite difference method:",
+   "source": [
+    "The discretization of Eq. 5 must be done in space and time: forward difference scheme for the time derivative $\\frac{\\partial u}{ \\partial t}$ and backward difference scheme for the space derivative $\\frac{\\partial u}{ \\partial x}$. Consider discretizing the spatial coordinate $x$ into points that we index from $i = 0$ to $N$, and stepping in discrete time intervals of size $\\Delta t$.\n",
+    "\n",
+    "$$\n",
+    "\\frac{u_i^{n+1}-u_i^n}{\\Delta t} + c \\frac{u_i^n - u_{i-1}^n}{\\Delta x} = 0\n",
+    "$$\n"
+   ],
    "id": "ee3c2cc727f23ac2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9ecee6696cc852c4"
   },
   {
    "metadata": {
@@ -157,90 +171,34 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D"
+    "import sys\n",
+    "import time"
    ],
    "id": "f1e212428f2a6bdd",
    "outputs": [],
    "execution_count": 14
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-15T00:47:12.559199Z",
-     "start_time": "2024-06-15T00:47:11.497600Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "# ChatGPT's solution\n",
-    "#defining parameters\n",
-    "nx = 1000 # number of spatial points\n",
-    "nt = 2000 # number of time steps\n",
-    "L = 200.0 # length of the spatial domain\n",
-    "T = 200 # total time\n",
-    "c = 0.01 # transport velocity\n",
-    "\n",
-    "dx = L/(nx - 1) # spatial step size\n",
-    "dt = T/nt     # time step size\n",
-    "\n",
-    "# stability criterion for the explicit scheme\n",
-    "if c*dt/ dx > 1:\n",
-    "    raise ValueError(\"The scheme is unstable. Please adjust dx, dt, or c.\")\n",
-    "\n",
-    "# initialize the spatial and temporal domain\n",
-    "x = np.linspace(0, L, nx)\n",
-    "t = np.linspace(0, T, nt)\n",
-    "\n",
-    "# initial condition\n",
-    "u_initial = np.sin(np.pi*x/L)\n",
-    "\n",
-    "# Initialize the solution matrix\n",
-    "u = np.zeros((nt, nx))\n",
-    "u[0, :] = u_initial\n",
-    "\n",
-    "# Time-stepping loop\n",
-    "for n in range(0, nt-1):\n",
-    "    for i in range(1, nx):\n",
-    "        u[n+1, i] = u[n, i] - c * dt / dx * (u[n, i] - u[n, i-1])\n",
-    "\n",
-    "# Plotting the solution in 3D\n",
-    "X, T = np.meshgrid(x, t)\n",
-    "print(X)\n",
-    "\n",
-    "#fig = plt.figure()\n",
-    "#ax = fig.add_subplot(111, projection='3d')\n",
-    "#ax.plot_surface(X, T, u, cmap='viridis')\n",
-    "\n",
-    "#ax.set_xlabel('Spatial coordinate (x)')\n",
-    "#ax.set_ylabel('Time (t)')\n",
-    "#ax.set_zlabel('Solution (u)')\n",
-    "#ax.set_title('1D Transport Equation Solution')\n",
-    "\n",
-    "#plt.show()"
+    "nx = 41\n",
+    "dx = 2/(nx-1)\n",
+    "nt = 25\n",
+    "dt = 0.025\n",
+    "c = 1"
    ],
-   "id": "5e90844abedbcf4e",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]\n",
-      " [  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]\n",
-      " [  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]\n",
-      " ...\n",
-      " [  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]\n",
-      " [  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]\n",
-      " [  0.          0.2002002   0.4004004 ... 199.5995996 199.7997998\n",
-      "  200.       ]]\n"
-     ]
-    }
-   ],
-   "execution_count": 15
+   "id": "2c13e739173d6451"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "u",
+   "id": "679df7b6eebf73bc"
   },
   {
    "metadata": {
